--- a/gallery/templates/add_album.html
+++ b/gallery/templates/add_album.html
@@ -6,18 +6,18 @@
 <div style="width: 400px; margin-left: 50px;">
     <br>
     <h3>Add Album</h3><hr>
-    <form method="post" action="/save_album/">{% csrf_token %}
+    <form method="post" action="/save_album/" enctype="multipart/form-data">{% csrf_token %}
   <fieldset class="form-group">
     <label for="title">Title</label>
-    <input type="text" class="form-control" id="title" placeholder="Album Title">
+    <input type="text" class="form-control" name="title" placeholder="Album Title">
   </fieldset>
   <fieldset class="form-group">
-    <label for="exampleTextarea">Description:</label>
-    <textarea class="form-control" id="description" rows="3"></textarea>
+    <label for="description">Description:</label>
+    <textarea class="form-control" name="description" rows="3"></textarea>
   </fieldset>
   <fieldset class="form-group">
     <label for="image">Image (Preview)</label>
-    <input type="file" class="form-control-file" id="img">
+    <input type="file" class="form-control-file" name="img">
     <small class="text-muted">This is thumnail/preview image to be ued for album.</small>
   </fieldset>
   <button type="submit" class="btn btn-primary">Submit</button>
