--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -3,6 +3,22 @@
 
 {% block body %}
 
-index page
+<table class="table" width="100" cellspacing="5" cellpadding="5" border="1">
+
+    <tr> 
+        {% for album in albums %}
+        <td>
+            <center>
+                <a href="/photos/{{ album.id }}">
+                    <img src="{{ album.img.url }}" width="240" height="240"></img><br>
+                    <b>{{ album.title }}</b><br>{{ album.created_at }}</a>
+            </center>
+        </td>
+        {% if forloop.counter|divisibleby:4 %}
+    </tr>
+    {% endif %}
+    {% endfor %}
+    </tr>
+</table>
 
 {% endblock %}
